# SmartHome-CENG464

./: CMakeLists.txt  Makefile.win  README.md  SmartHome.dev
include/: Camera.h  Device.h  DeviceFactory.h  LGTV.h  Light.h  SamsungTV.h  TV.h
src/: DeviceFactory.cpp  main.cpp
